# cuda

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: reduce_lin.cu  test.cu
src/Ex1/: Ex1.cu
src/Ex2/: err1.cu  err2.cu
src/Ex3/: Ex3.cu
